# CDaR-model-lab

./: .gitignore  CHANGELOG.md  ENHANCED_CDAR_MODEL_PRD.md  ENHANCED_CDAR_UI_AND_ANIMATION_PRD.md  ENHANCED_CDAR_UI_ANIMATION_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN.md  QUICKSTART.md  README.md  RELEASE_CHECKLIST.md  package.json  pyproject.toml  requirements.txt
.github/workflows/: python-tests.yml
examples/: config.example.yaml  example_basic_pipeline.ipynb  example_basic_pipeline.py  example_cli_usage.md
scripts/: dev.mjs
src/enhanced_cdar/: __init__.py  cli.py  config.py
src/enhanced_cdar/data/: __init__.py  loaders.py  preprocess.py
src/enhanced_cdar/metrics/: __init__.py  cdar.py  drawdown.py  risk_metrics.py
src/enhanced_cdar/portfolio/: __init__.py  backtest.py  optimization.py  regime.py  scenario.py  weights.py
src/enhanced_cdar/viz/: __init__.py  animation.py  frontier.py  surfaces.py  underwater.py
tests/: conftest.py  test_animation.py  test_backtest.py  test_backtest_dynamic.py  test_backtest_rebalance_flags.py  test_cdar.py  test_cli.py  test_cli_ui_animation.py  test_config.py  test_config_precedence.py  test_data_preprocess.py  test_drawdown.py  test_frontier_behavior.py  test_integration_sample_data.py  test_optimization.py  test_pipeline_integration.py  test_property_metrics.py  test_regime.py  test_regime_validation.py  test_scenario.py  test_scenario_validation.py  test_ui_utils.py  test_weights.py
tests/data/: sample_prices_spy_agg_gld_qqq.csv
ui/: state.py  streamlit_app.py  utils.py
